...
          {t(
            'Save pin throughout your favorite Tik Tok video or Instagram video. Copy URL and paste it here.',
          )}
        </Text>
      </LinearGradient>
      <BoardButton
        testID="board-paste"
        title={t('Paste link')}
        variant="dark"
        loading={checking}
        onPress={onPaste}
      />
    </View>
...
