...
                variant="detail"
                onPress={() => setEdit(true)}
              />
            ) : null}
            {board?.pins.length ? (
              <BoardButton
                testID="board-generate"
                title={t('Generate me a trip')}
                icon={<Ionicons name="sparkles" size={16} color="white" />}
                style={{ borderRadius: 18 }}
                onPress={() => {
                  if (!board.countryId) {
                    Alert.alert(
...
